--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "3rdparty/zydis"]
 	path = 3rdparty/zydis
-	url = https://github.com/zyantific/zydis
+	url = https://github.com/zyantific/zydis.git
